<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnce"
                android:text="@string/ce"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnc"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/backbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnback"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bagibtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnbagi"
                android:text="@string/bagi"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tujuhbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btntujuh"
                android:text="@string/tujuh"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delapanbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btndelapan"
                android:text="@string/delapan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sembilanbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnsembilan"
                android:text="@string/sembilan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/kalibtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnkali"
                android:text="@string/kali"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/empatbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnempat"
                android:text="@string/empat"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/limabtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnlima"
                android:text="@string/lima"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/enambtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnenam"
                android:text="@string/enam"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/kurangbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnkurang"
                android:text="@string/kurang"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/satubtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnsatu"
                android:text="@string/satu"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/duabtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnndua"
                android:text="@string/dua"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/tigabtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btntiga"
                android:text="@string/tiga"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/tambahbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btntambah"
                android:text="@string/tambah"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/plusminusbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnplusminus"
                android:text="@string/plusminus"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nolbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnnol"
                android:text="@string/nol"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/komabtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnkoma"
                android:text="@string/koma"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/samadenganbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="btnsamadengan"
                android:text="@string/samadengan"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="false"
        android:background="@drawable/button"
        android:inputType="none"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>